--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>DO you love me ? 🤗</h1>
-      <p></p>
+      <p> By-Ritwik</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
